package Services;

public interface IsistemaDeckList {
    String iniciarSesison();
    String registrarse();
    String Salir();
}
